fix: hover color on input and textarea (low visibility on light schemes)

--- a/project/modules/form/code/scss/input/pseudo-element.scss
+++ b/project/modules/form/code/scss/input/pseudo-element.scss
@@ -9,7 +9,7 @@
 
 	&:hover:not(&.disabled) input,
 	&:hover:not(&.disabled) textarea {
-		color: var(--color-gray-20);
+		color: var(--color-gray-80);
 		transition: color 0.4s ease-in-out;
 	}
 
